this is to check 3rd change

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>This is a simple HTML file for testing Git commits, branches, and merges.</p>
     <p>Created by: Sazid Ali</p>
     <p>this is 2nd line that i am adding for 2nd change i mean version</p>
+    <p>this is actually  3rd change</p>
 </body>
 </html>
