--- a/index.html
+++ b/index.html
@@ -3,13 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git Practice Page</title>
+    <title>Welcome to My Practice HTTPD Server</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f2f2f2;
+            text-align: center;
+            padding-top: 100px;
+        }
+        h1 {
+            color: #0078D7;
+        }
+        p {
+            color: #333;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My Git Practice Page</h1>
-    <p>This is a simple HTML file for testing Git commits, branches, and merges.</p>
-    <p>Created by: Sazid Ali</p>
-    <p>this is 2nd line that i am adding for 2nd change i mean version</p>
-    <p>this is actually  3rd change</p>
+    <h1>Welcome to My Apache HTTPD Server!</h1>
+    <p>This is a simple HTML page hosted on an Apache web server.</p>
+    <p>Server is working fine ✅</p>
 </body>
 </html>
