--- a/index.html
+++ b/index.html
@@ -3,25 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to My Practice HTTPD Server</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
-            text-align: center;
-            padding-top: 100px;
-        }
-        h1 {
-            color: #0078D7;
-        }
-        p {
-            color: #333;
-        }
-    </style>
+    <title>My Practice HTTPD Server</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to My Apache HTTPD Server!</h1>
-    <p>This is a simple HTML page hosted on an Apache web server.</p>
-    <p>Server is working fine ✅</p>
+    <div class="container">
+        <h1>Welcome to My Apache HTTPD Server!</h1>
+        <p>This is a simple HTML page hosted for practice.</p>
+        <p class="status">Server is running successfully ✅</p>
+        <p this is first change in this file  ✅</p>
+    </div>
 </body>
 </html>
