--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <p>This is a simple HTML page hosted for practice.</p>
         <p class="status">Server is running successfully ✅</p>
         <p this is first change in this file  ✅</p>
+        <p this is 2nd change in this file  ✅</p>
     </div>
 </body>
 </html>
