--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Welcome to My Apache HTTPD Server!</h1>
         <p>This is a simple HTML page hosted for practice.</p>
-        <pi add 2nd line  successfully ✅</p>
+        <p>This is a simple change for v1</p>
         <p class="status">Server is running successfully ✅</p>
     </div>
 </body>
